# sdk

./: .gitignore  package-lock.json
.github/workflows/: build-cli-docker.yml  build-cli.yml  publish-rust-crates.yml  release-cli.yml  release-napi.yml  version-bump.yml
crates/bitwarden/: Cargo.toml
crates/bitwarden-napi/: package-lock.json
crates/bitwarden-uniffi/: Cargo.toml  run.sh
crates/bitwarden-uniffi/src/: lib.rs  sdk.udl
crates/bitwarden/src/crypto/: aes_ops.rs  enc_string.rs  encryptable.rs  master_key.rs  mod.rs  rsa.rs
languages/dotnet/: Bitwarden.SDK.nuspec  BitwardenSDK.sln
languages/dotnet/Bitwarden.SDK.Shared/: Bitwarden.SDK.Shared.projitems  Bitwarden.SDK.Shared.shproj  BitwardenClient.cs  BitwardenClientSafeHandle.cs  BitwardenClientWrapper.cs
languages/dotnet/Bitwarden.SDK.Standard/: Bitwarden.SDK.Standard.csproj
languages/dotnet/Bitwarden.SDK.iOS/: ApiDefinition.cs  Bitwarden.SDK.iOS.csproj  Structs.cs
languages/dotnet/Bitwarden.SDK.iOS/Properties/: AssemblyInfo.cs
support/scripts/: schemas.ts
