[package]
name = "bitwarden-uniffi"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "cdylib"]
bench = false

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
env_logger = "0.10.0"
uniffi = "0.23.0"
openssl = { version = "0.10", features = ["vendored"] }

bitwarden = { path = "../bitwarden" }

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build", "cli"] }
